--- a/Index.html
+++ b/Index.html
@@ -19,7 +19,7 @@
                                     <ul class="main-nav">
                                             <li class="active"><a href="Index.html">HOME</a></li>
                                             <li><a href="tictactoe.html">PLAY</a></li>
-                                            <li><a href="info.html">CONTACT US</a></li>
+                                            <li><a href="Info.html">CONTACT US</a></li>
                                             <li><a href="contact.html">MORE</a></li>
                                             
                                     </ul>
